--- a/hmt/index.qmd
+++ b/hmt/index.qmd
@@ -11,3 +11,11 @@ This page will introduce digital work on the Homer Multitext project.
 
 
 Overview: TBA
+
+
+
+-   The HMT archive
+-   Manuscript layout
+-   Scholiastic language
+-   Homeric language
+-   Finding Aristarchus
