--- a/digschol/narrative/index.qmd
+++ b/digschol/narrative/index.qmd
@@ -2,20 +2,30 @@
 title: "Narrative thread"
 ---
 
-This is where we link to concept discussions.
 
 ## Citation
 
-- [Citation and scholarship](../../cite/) in the humanities
-- [Citing texts]()
+### Overview
+
+::: {.callout-tip title="Summary"}
+Scholarship in the humanities depends on **citation** to identify its unique objects of study. This section presents work on technology-independent citation using URNs: passages of texts (implemented with CTS URNs), physical artifacts (CITE2 URNs) and documentary images (CITE2 URNs, including extension for region of interest on an image)
+:::
+
+- [Citation and scholarship](https://neelsmith.quarto.pub/citablebase/concepts/) (concepts impemented in the `CitableBase` package)
+- [Citing texts](https://neelsmith.quarto.pub/citablebase/concepts/) (the `CitableText` package)
 - Citing artifacts
 - Citing images
 
-    passages of texts (CTS URNs)
-    physical artifacts (CITE2 URNs)
-    documentary images (CITE2 URNs, including extension for region of interest on an image)
+    
 
 ## Digital texts
 
+::: {.callout-tip title="Summary"}
+All analysis of **digital texts** must take account of how the text's writing system, or *orthography*, is digitally encoded, and how we can derive *citable digital editions* from sources in a variety of structured text formats. I'm interested in digital *scholarly editions of physical texts* that encode both textual and non-textual contents. 
+:::
 
 ## Morphological parsing
+
+::: {.callout-tip title="Summary"}
+*Morphological parsing* is especially important for the morphologically rich languages I study.
+:::
