--- a/utils/index.qmd
+++ b/utils/index.qmd
@@ -6,8 +6,9 @@ title: "Some generic utilities"
 :::{.callout-caution}
 ## Content incomplete
 
-This page will introduce generic utilities for sequence alignment.
+This page will introduce generic utilities.
 :::
 
 
-- VectorAlignments.jl: see [documentation](https://neelsmith.github.io/VectorAlignments.jl/stable/)
+-  VectorAlignments.jl: see [documentation](https://neelsmith.github.io/VectorAlignments.jl/stable/)
+- [`Lectionary.jl`](http://neelsmith.quarto.pub/lectionary): a Julia package for coordinating the liturgical calendar year with the Gregorian civil calendar and with the readings from the Revised Common Lectionary (RCL).
