--- a/digschol/index.qmd
+++ b/digschol/index.qmd
@@ -6,6 +6,7 @@ title: "Digital scholarship"
 
 The digital scholarship linked here has an overall logic: there is a natural sequence progressing from citation, to successsive forms of textual manipulation and analysis, to applications of those concepts.
 
+You can 
 
 
 I've chosen to present them together with documentation and tutorials using implementations of the concepts, because I don't believe that we can adequately assess or critique ideas about digital scholarship without running code.
@@ -25,7 +26,7 @@ The topics in the "Concepts and code" section form a natural sequence,  Linked i
 
 All code in the linked sections is in written  [Julia](../julia/).
 
-## Fundamental generic packages for citation and textual analysis
+## Fundamentals: citation and textual analysis
 
 
 
