Publish reorganized site

--- a/cite/index.qmd
+++ b/cite/index.qmd
@@ -19,6 +19,6 @@ The right technology for this is the [URN](../cite/urns/).
 
 Much of my work with [digital texts](../digitexts/) considers texts contents in relation to the physical artifacts preserving the text. For this work, citation models:
 
-- passages of [texts](../cite/urns/cts.qmd) (CTS URNs)
-- physical [artifacts](../cite/urns/cite2.qmd) (CITE2 URNs)
-- documentary [images](../cite/urns/imgs.qmd) (CITE2 URNs, including extension for region of interest on an image)
+- passages of [texts](../cite/urns/cts/) (CTS URNs)
+- physical [artifacts](../cite/urns/cite2/) (CITE2 URNs)
+- documentary [images](../cite/urns/imgs/) (CITE2 URNs, including extension for region of interest on an image)
