--- a/digschol/narrative/index.qmd
+++ b/digschol/narrative/index.qmd
@@ -11,7 +11,7 @@ Scholarship in the humanities depends on **citation** to identify its unique obj
 :::
 
 - [Citation and scholarship](https://neelsmith.quarto.pub/citablebase/concepts/) (concepts impemented in the `CitableBase` package)
-- [Citing texts](https://neelsmith.quarto.pub/citablebase/concepts/) (the `CitableText` package)
+- [Citing texts](https://neelsmith.quarto.pub/citabletext/concepts/) (the `CitableText` package)
 - Citing artifacts
 - Citing images
 
@@ -23,8 +23,18 @@ Scholarship in the humanities depends on **citation** to identify its unique obj
 All analysis of **digital texts** must take account of how the text's writing system, or *orthography*, is digitally encoded, and how we can derive *citable digital editions* from sources in a variety of structured text formats. I'm interested in digital *scholarly editions of physical texts* that encode both textual and non-textual contents. 
 :::
 
+- [Writing and orthographic systems](https://neelsmith.quarto.pub/orthography/concepts/) (the `Orthography` package)
+- Making archival documents citable (the `CitableTeiReaders` package)
+- Compiling univocal textual editions (the `EditionBuidlers` package)
+
+
+
+
+
 ## Morphological parsing
 
 ::: {.callout-tip title="Summary"}
 *Morphological parsing* is especially important for the morphologically rich languages I study.
 :::
+
+-  [Building citable parsers](https://neelsmith.quarto.pub/citableparserbuilder/)
