--- a/utils/index.qmd
+++ b/utils/index.qmd
@@ -3,13 +3,7 @@ title: "Some generic utilities"
 ---
 
 
-:::{.callout-caution}
-## Content incomplete
 
-This page will introduce generic utilities.
-:::
-
-
--  VectorAlignments.jl: see [documentation](https://neelsmith.github.io/VectorAlignments.jl/stable/)
+-  `VectorAlignments.jl`: see the current [documentation on github](https://neelsmith.github.io/VectorAlignments.jl/stable/)
 - [`Lectionary.jl`](http://neelsmith.quarto.pub/lectionary): a Julia package for coordinating the liturgical calendar year with the Gregorian civil calendar and with the readings from the Revised Common Lectionary (RCL).
-- `Parashah.jl`: a Julia package for coordinating readings of the Parashat HaShavua with the representation of the Hebrew calendar implemented in `Calendars.jl`.
+- `Parashah.jl`: a Julia package for coordinating readings of the Parashat HaShavua with the representation of the Hebrew calendar implemented in `Calendars.jl` (preliminary work, not yet published on juliahub).
