--- a/digschol/index.qmd
+++ b/digschol/index.qmd
@@ -6,7 +6,7 @@ title: "Digital scholarship"
 
 The digital scholarship presented here has an overall logic: there is a natural progression from citation, to successsive forms of textual manipulation and analysis, to applications of those concepts.
 
-While the discussion of this work could be read in a single sequence like a book, I've chosen to compose it in separate sections alongside documentation of Julia packages implementing the concepts under discussion, since I don't believe that we can ever adequately assess or critique ideas about digital scholarship without running code.  I've tried to have it both ways by linking together a sequence of the discussions that you can follow in something more like a single narrative
+While the discussion of this work could be read in a single sequence like a book, I've chosen to compose it in separate sections integrated within documentation of Julia packages implementing the concepts under discussion, since I don't believe that we can ever adequately assess or critique ideas about digital scholarship without running code.  I'm trying to have it both ways by linking together a sequence of the prose presentations that you can follow in something more like a single narrative.
 
 
 
@@ -18,7 +18,7 @@ While the discussion of this work could be read in a single sequence like a book
 
 ## (2) Code
 
-All code in the following sections is  written in  [Julia](../julia/).   Documentation for each package includes tutorials, "how-to" guides for particular tasks, and API documentation. The documentation was built with [Quarto](https://quarto.org/), so that all  examples of code output are generated from running source code, and all API documentation is extracted from the package's source code.
+All code linked from the following sections is  written in  [Julia](../julia/).   Documentation for each Julia package includes tutorials, "how-to" guides for particular tasks, and API documentation. The documentation was built with [Quarto](https://quarto.org/), so that all  examples of code output are generated from running source code, and all API documentation is extracted from the package's source code.
 
 - see a [graph showing relations](./pkg_graph/) among these packages.
 
