--- a/digschol/pkg_graph/index.qmd
+++ b/digschol/pkg_graph/index.qmd
@@ -44,7 +44,7 @@ click CitableTeiReaders "https://neelsmith.quarto.pub/citableteireaders/" "Make 
 
 EditionBuilders --> CitableText
 EditionBuilders --> CitableCorpus
-
+click EditionBuilders "https://neelsmith.quarto.pub/editionbuilders/" "Make univocal editions"
 
 Orthography --> CitableCorpus
 Orthography --> CitableText
@@ -112,7 +112,7 @@ classDef quarto stroke-width:4,stroke:#1E90FF
 classDef morph fill:#d8d4f2
 class CitableParserBuilder,Kanones,Tabulae morph
 
-class CitableBase,CitableText,CitableObject,CiteEXchange,CitableImage,CitableCorpus,CitableCollection,CitablePhysicalText,Orthography,CitableTeiReaders,CitableParserBuilder,Tabulae quarto
+class CitableBase,CitableText,CitableObject,CiteEXchange,CitableImage,CitableCorpus,CitableCollection,CitablePhysicalText,Orthography,CitableTeiReaders,EditionBuilders,CitableParserBuilder,Tabulae quarto
 ```
 
 
